--- a/paxos.properties
+++ b/paxos.properties
@@ -9,9 +9,13 @@
 
 # A process is described by:
 # process.<id> = <address>:<port for replicas>:<port for clients>
-process.0 = localhost:2021:3001
-process.1 = localhost:2022:3002
-process.2 = localhost:2023:3003
+process.0 = libra.ecn.purdue.edu:2021:3001
+process.1 = libra.ecn.purdue.edu:2022:3002
+process.2 = libra.ecn.purdue.edu:2023:3003
+
+db.0 = 128.46.76.108/paxos
+db.1 = 128.46.76.108/paxos2
+db.2 = 128.46.76.108/paxos3
 
 
 ### System model ###
