Sri | Logging to instrumentation database instead of screen

--- a/paxos.properties
+++ b/paxos.properties
@@ -16,6 +16,7 @@ process.2 = libra.ecn.purdue.edu:2023:3003
 db.0 = 128.46.76.108/paxos
 db.1 = 128.46.76.108/paxos2
 db.2 = 128.46.76.108/paxos3
+db.instrumentation = 128.46.76.108/instrumentation
 
 
 ### System model ###
