Sri | Changing snapshotting and restore from snapshot logic to use scripts instead of JDBC in memory copy

--- a/paxos.properties
+++ b/paxos.properties
@@ -18,6 +18,13 @@ db.1 = 128.46.76.108/paxos2
 db.2 = 128.46.76.108/paxos3
 db.instrumentation = 128.46.76.108/instrumentation
 
+db.0.user = postgres
+db.1.user = postgres
+db.2.user = postgres
+
+db.0.name = paxos
+db.1.name = paxos2
+db.2.name = paxos3
 
 ### System model ###
 
