--- a/network.properties
+++ b/network.properties
@@ -4,10 +4,10 @@ clusters = cluster1,cluster2
 cluster1 = node-1,node-2
 cluster2 = node-3,node-4,node-5
 
-cluster1.intraDelay = 6ms
-cluster2.intraDelay = 6ms
+cluster1.intraDelay = 6
+cluster2.intraDelay = 6
 
-cluster1.cluster2.interDelay = 60ms
+cluster1.cluster2.interDelay = 60
 
 experiment.name = paxos5node
 project.name = dtunes
