Sri | Added convenience scripts and removed paxos.properties from version control

--- a/paxos.properties
+++ b/paxos.properties
@@ -9,22 +9,30 @@
 
 # A process is described by:
 # process.<id> = <address>:<port for replicas>:<port for clients>
-process.0 = libra.ecn.purdue.edu:2021:3001
-process.1 = libra.ecn.purdue.edu:2022:3002
-process.2 = libra.ecn.purdue.edu:2023:3003
+process.0 = node-1.paxos5node.dtunes.kodiak.nx:2021:3001
+process.1 = node-2.paxos5node.dtunes.kodiak.nx:2022:3002
+process.2 = node-3.paxos5node.dtunes.kodiak.nx:2023:3003
+process.3 = node-4.paxos5node.dtunes.kodiak.nx:2024:3004
+process.4 = node-5.paxos5node.dtunes.kodiak.nx:2025:3005
 
-db.0 = 128.46.76.108/paxos
-db.1 = 128.46.76.108/paxos2
-db.2 = 128.46.76.108/paxos3
-db.instrumentation = 128.46.76.108/instrumentation
+db.0 = localhost/paxos
+db.1 = localhost/paxos2
+db.2 = localhost/paxos3
+db.3 = localhost/paxos4
+db.4 = localhost/paxos5
+db.instrumentation = node-3.paxos5node.dtunes.kodiak.nx/instrumentation
 
 db.0.user = postgres
 db.1.user = postgres
 db.2.user = postgres
+db.3.user = postgres
+db.4.user = postgres
 
 db.0.name = paxos
 db.1.name = paxos2
 db.2.name = paxos3
+db.3.name = paxos4
+db.4.name = paxos5
 
 ### System model ###
 
@@ -97,7 +105,7 @@ BatchSize = 65507
 # Default: 10
 #
 # A batch is sent either when it's full (reaches BatchSize) or this delay elapses.
-MaxBatchDelay = 10
+MaxBatchDelay = 0
 
 # Size of a buffer for reading client requests; larger requests than this
 # size will cause extra memory allocation and freeing at each such request.
